8372738: ZGC: C2 allocation reloc promotion deopt race