src/hotspot/share/gc/z/zRelocationSet.hpp
@@ -45,6 +45,7 @@ private:
   size_t               _nforwardings;
   ZLock                _promotion_lock;
   ZArray<ZPage*>       _flip_promoted_pages;
+  ZArray<ZPage*>       _relocate_promoted_pages;
   ZArray<ZPage*>       _in_place_relocate_promoted_pages;
 
   ZWorkers* workers() const;
@@ -58,8 +59,10 @@ public:
   void reset(ZPageAllocator* page_allocator);
   ZGeneration* generation() const;
   ZArray<ZPage*>* flip_promoted_pages();
+  ZArray<ZPage*>* relocate_promoted_pages();
 
   void register_flip_promoted(const ZArray<ZPage*>& pages);
+  void register_relocate_promoted(const ZArray<ZPage*>& pages);
   void register_in_place_relocate_promoted(ZPage* page);
 };
 
